--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -168,7 +168,7 @@ publish:
   - ${APPLY_COMMAND} "sudo chmod 770 ${IPARAPHEUR_DIST_ELEMENTS_PATH}/${INIT_SCRIPT}"
   - ${APPLY_COMMAND} "sudo chgrp deployment ${IPARAPHEUR_DIST_ELEMENTS_PATH}/${INIT_SCRIPT}"
   - ${APPLY_COMMAND} "unlink ${IPARAPHEUR_DIST_SYMLINK_PATH}"
-  - ${APPLY_COMMAND} "ln -s ${IPARAPHEUR_DIST_ELEMENTS_PATH} ${IPARAPHEUR_DIST_SYMLINK_PATH}"
+  - ${APPLY_COMMAND} "ln -s --relative ${IPARAPHEUR_DIST_ELEMENTS_PATH} ${IPARAPHEUR_DIST_SYMLINK_PATH}"
   # TODO : Remove this, it infringe the standard deploy.
   #  Each "override" files should be set on the server, and not distributed anymore
   - |
