Try to generify the simlink commands

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,8 @@ variables:
     RESET_DATA: "TRUE"
     OVERWRITE_ADMIN_PASSWORD: "TRUE"
     OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_DEV}
+    # FIXME
+    IPARAPHEUR_DIST_SYMLINK_PATH: ""
     IPARAPHEUR_CURRENT_ELEMENTS_PATH: "/opt/iParapheur"
     IPARAPHEUR_DIST_ELEMENTS_PATH: "/opt/iParapheur"
   environment: &e2e-test-environment
@@ -61,6 +63,8 @@ variables:
     TARGETED_ENVIRONNEMENT_USER: ${ACCEPTANCE_TARGET_SERVER_USER}
     SSH_PRIVATE_KEY_B64: ${ACCEPTANCE_SSH_PRIVATE_KEY_B64}
     RESET_DATA: "FALSE"
+    # FIXME
+    IPARAPHEUR_DIST_SYMLINK_PATH: ""
     IPARAPHEUR_CURRENT_ELEMENTS_PATH: "/opt/iParapheur"
     IPARAPHEUR_DIST_ELEMENTS_PATH: "/opt/iParapheur"
     OVERRIDE_DOCKER_COMPOSE_FILES: ${DOCKER_COMPOSE_OVERRIDES_TAG}
@@ -167,8 +171,8 @@ publish:
   - scp ./${INIT_SCRIPT} ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${IPARAPHEUR_DIST_ELEMENTS_PATH}/${INIT_SCRIPT}
   - ${APPLY_COMMAND} "sudo chmod 770 ${IPARAPHEUR_DIST_ELEMENTS_PATH}/${INIT_SCRIPT}"
   - ${APPLY_COMMAND} "sudo chgrp deployment ${IPARAPHEUR_DIST_ELEMENTS_PATH}/${INIT_SCRIPT}"
-  - ${APPLY_COMMAND} "unlink ${IPARAPHEUR_DIST_SYMLINK_PATH}"
-  - ${APPLY_COMMAND} "ln -s --relative ${IPARAPHEUR_DIST_ELEMENTS_PATH} ${IPARAPHEUR_DIST_SYMLINK_PATH}"
+  - [ -z "$IPARAPHEUR_DIST_SYMLINK_PATH" ] && echo "No symlink, skipping..." || ${APPLY_COMMAND} "unlink ${IPARAPHEUR_DIST_SYMLINK_PATH}"
+  - [ -z "$IPARAPHEUR_DIST_SYMLINK_PATH" ] && echo "No symlink, skipping..." || ${APPLY_COMMAND} "ln -s --relative ${IPARAPHEUR_DIST_ELEMENTS_PATH} ${IPARAPHEUR_DIST_SYMLINK_PATH}"
   # TODO : Remove this, it infringe the standard deploy.
   #  Each "override" files should be set on the server, and not distributed anymore
   - |
