--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,6 +97,16 @@ variables:
     name: TEST
     url: https://${TEST_TARGET_SERVER_URL}
 
+.partner-config:
+  variables: &partner-config
+    TARGETED_ENVIRONNEMENT_URL: ${PARTNER_TARGET_SERVER_URL}
+    TARGETED_ENVIRONNEMENT_USER: ${PARTNER_TARGET_SERVER_USER}
+    SSH_PRIVATE_KEY_B64: ${PARTNER_SSH_PRIVATE_KEY_B64}
+    RESET_DATA: "FALSE"
+  environment: &partner-environment
+    name: TEST
+    url: https://${TEST_TARGET_SERVER_URL}
+
 # <editor-fold desc="Package">
 
 .prepare-package: &prepare-package
@@ -312,6 +322,18 @@ test-deploy:
     - when: manual
   variables: *test-config
   environment: *test-environment
+
+partner-deploy:
+  extends: [ .deploy-job ]
+  stage: deploy
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
+    - if: $CI_COMMIT_TAG != null
+      when: manual
+    - when: manual
+  variables: *partner-config
+  environment: *partner-environment
 
 # </editor-fold desc="Deploy">
 
