--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,10 +48,7 @@ variables:
     RESET_DATA: "TRUE"
     OVERWRITE_ADMIN_PASSWORD: "TRUE"
     OVERRIDE_DOCKER_COMPOSE_FILES: "docker-compose.override.dev.yml"
-    # FIXME
-    SERVER_SIMLINK_PATH: ""
-    SERVER_CURRENT_PATH: "/opt/iParapheur"
-    SERVER_DIST_PATH: "/opt/iParapheur"
+    SERVER_DIST_PATH: "/opt/iparapheur/dist-${CI_COMMIT_REF_NAME}-${CI_JOB_STARTED_AT}"
   environment: &e2e-test-environment
     name: Charge/Tests e2e
     url: https://${E2E_TESTS_TARGET_SERVER_URL}
