--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -271,7 +271,7 @@ services:
     image: hubdocker.libriciel.fr/postgres:10.1
     restart: unless-stopped
     tty: true
-    mem_limit: 512M
+    mem_limit: 1G
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
@@ -287,7 +287,7 @@ services:
       - WORKFLOW_DB_PASSWORD
       - SECUREMAIL_DB_USER
       - SECUREMAIL_DB_PASSWORD
-    command: postgres -c max_connections=500 -c log_min_messages=LOG
+    command: postgres -c max_connections=1000 -c log_min_messages=LOG
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
