target our develop for alfresco

--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -67,6 +67,10 @@ services:
     mem_limit: 768M
     memswap_limit: 768M
 
+
+  alfresco:
+    image: registry.libriciel.fr:443/public/signature/ip-alfresco:develop
+
   postgres:
     mem_limit: 768M
     memswap_limit: 768M
