switch back to develop for core

--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -29,7 +29,7 @@
 services:
 
   core:
-    image: registry.libriciel.fr/public/signature/ip-core:fix-connections-leaks
+    image: registry.libriciel.fr/public/signature/ip-core:develop
     mem_limit: 1536M
     memswap_limit: 1536M
     volumes:
