--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -34,6 +34,8 @@ services:
     memswap_limit: 1536M
     volumes:
       - ./application-core.yml:/application.yml
+    ports:
+      - "8080:8080"
 
 
   web:
