Use the string variable replacement

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,7 @@ services:
       - SMTP_MAIL_FROM
       - SMTP_ENABLE_SSL
       - SMTP_ENABLE_START_TLS
-      - APP_VERSION=${CI_COMMIT_REF_NAME}
+      - APP_VERSION=%CI_COMMIT_REF_NAME%
     depends_on:
       postgres:
         condition: service_healthy
