use some global variables

--- a/.env.dist
+++ b/.env.dist
@@ -19,6 +19,8 @@
 # https://docs.docker.com/compose/environment-variables/
 
 DATA_ROOT_DIR=/data/iparapheur
+BACKUPS_ROOT_DIR=/data/iparapheur_backups
+
 APPLICATION_PROTOCOL=https
 APPLICATION_HOST=iparapheur.dom.local
 CERTIFICATE_FULLCHAIN_PATH=./data/nginx/ssl/fullchain.pem
