--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -271,7 +271,7 @@ services:
 
 
   postgres:
-    image: hubdocker.libriciel.fr/postgres:10.1
+    image: hubdocker.libriciel.fr/postgres:10.23-bullseye
     restart: unless-stopped
     tty: true
     mem_limit: 1G
