--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -24,8 +24,7 @@ services:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/nginx:develop
     extra_hosts:
       - "host.docker.internal:host-gateway"
-    #mem_limit: 64M
-    #memswap_limit: 64M
+    memswap_limit: 256M
 
 
   core:
@@ -36,16 +35,14 @@ services:
       - ./src/main/resources/core/application-dev.yml:/application.yml
     environment:
       - JAVA_OPTS=-Dspring.profiles.active=dev-container
-    #mem_limit: 2G
-    #memswap_limit: 2G
+    memswap_limit: 2G
     ports:
       - "8080:8080"
 
 
   web:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-web:develop
-    #mem_limit: 64M
-    #memswap_limit: 64M
+    memswap_limit: 64M
     environment:
       - VERSION=5.0.6-develop
     ports:
@@ -54,8 +51,7 @@ services:
 
   workflow:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/workflow:develop
-    #mem_limit: 1G
-    #memswap_limit: 1G
+    memswap_limit: 768M
     volumes:
       - ./src/main/resources/workflow/application-dev-docker.yml:/application.yml
     ports:
@@ -82,8 +78,7 @@ services:
 
   crypto:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/i-parapheur/ip-crypto:develop
-    #mem_limit: 256M
-    #memswap_limit: 256M
+    memswap_limit: 1536M
     ports:
       - "8085:8080"
 
@@ -95,15 +90,13 @@ services:
 
 
   pes-viewer:
-    #mem_limit: 256M
-    #memswap_limit: 256M
+    memswap_limit: 1536M
     ports:
       - "8888:8888"
 
 
   pdf-stamp:
-    #mem_limit: 256M
-    #memswap_limit: 256M
+    memswap_limit: 1G
     ports:
       - "8889:8080"
 
@@ -112,8 +105,7 @@ services:
 
 
   alfresco:
-    #mem_limit: 1024M
-    #memswap_limit: 1024M
+    memswap_limit: 1536M
     ports:
       - "9009:8080"
 
@@ -131,17 +123,14 @@ services:
 
 
   postgres:
-    #mem_limit: 512M
-    #memswap_limit: 512M
+    memswap_limit: 1G
     ports:
       - "5432:5432"
 
 
   keycloak:
-    image: ip-keycloak:dev-2
     command: start  --import-realm
-    #mem_limit: 768M
-    #memswap_limit: 768M
+    memswap_limit: 1536M
     ports:
       - "9090:8080"
     environment:
@@ -159,8 +148,7 @@ services:
 
   redis:
     image: redis:6.0-alpine
-    #mem_limit: 64M
-    #memswap_limit: 64M
+    memswap_limit: 128M
     ports:
       - "6379:6379"
 
