Use the internal image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -282,9 +282,9 @@ services:
           memory: 1280M
 
 
-  # solr6:
-  #   image: alfresco/alfresco-search-services:2.0.5
-  #   deploy:
+      # solr6:
+      #   image: alfresco/alfresco-search-services:2.0.5
+      #   deploy:
       resources:
         limits:
           memory: 1G
@@ -316,7 +316,7 @@ services:
 
 
   postgres:
-    image: hubdocker.libriciel.fr/postgres:10.23-bullseye
+    image: registry.libriciel.fr:443/public/signature/ip-postgresql:10.1.0
     restart: unless-stopped
     tty: true
     deploy:
@@ -338,15 +338,8 @@ services:
       - WORKFLOW_DB_PASSWORD
       - SECUREMAIL_DB_USER
       - SECUREMAIL_DB_PASSWORD
-    command: postgres -c max_connections=1000 -c log_min_messages=LOG
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     volumes:
       - ${DATA_ROOT_DIR}/postgres:/var/lib/postgresql/data
-      - ./src/main/resources/postgres/docker-entrypoint-initdb.d/:/docker-entrypoint-initdb.d/
 
 
   redis:
