--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
 
 
   core:
-    image: registry.libriciel.fr:443/public/signature/ip-core:1.3.5
+    image: registry.libriciel.fr:443/public/signature/ip-core:1.3.6
     restart: unless-stopped
     tty: true
     deploy:
@@ -119,7 +119,7 @@ services:
 
 
   web:
-    image: registry.libriciel.fr:443/public/signature/ip-web:1.3.4
+    image: registry.libriciel.fr:443/public/signature/ip-web:1.3.5
     restart: unless-stopped
     tty: true
     deploy:
@@ -153,7 +153,7 @@ services:
 
 
   pes-viewer:
-    image: registry.libriciel.fr:443/public/signature/pes-viewer:1.5.2
+    image: registry.libriciel.fr:443/public/signature/pes-viewer:1.5.3
     restart: unless-stopped
     tty: true
     deploy:
@@ -282,12 +282,12 @@ services:
           memory: 1280M
 
 
-      # solr6:
-      #   image: alfresco/alfresco-search-services:2.0.5
-      #   deploy:
-      resources:
-        limits:
-          memory: 1G
+  # solr6:
+  #   image: alfresco/alfresco-search-services:2.0.5
+  #   deploy:
+  #    resources:
+  #      limits:
+  #        memory: 1G
   #   environment:
   #     #Solr needs to know how to register itself with Alfresco
   #     - SOLR_ALFRESCO_HOST=${CONTENT_HOST}
@@ -316,7 +316,7 @@ services:
 
 
   postgres:
-    image: registry.libriciel.fr:443/public/signature/ip-postgresql:10.1.0
+    image: registry.libriciel.fr:443/public/signature/ip-postgresql:10.23.0
     restart: unless-stopped
     tty: true
     deploy:
@@ -466,3 +466,4 @@ services:
     volumes:
       - ./src/main/resources/prometheus/alert.rules:/etc/prometheus/alert.rules
       - ./src/main/resources/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
