--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,9 +111,11 @@ services:
       postgres:
         condition: service_healthy
       alfresco:
-        condition: service_started
+        condition: service_healthy
       workflow:
-        condition: service_started
+        condition: service_healthy
+      keycloak:
+        condition: service_healthy
     external_links:
       - nginx:${APPLICATION_HOST}
 
