--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,7 +115,7 @@ services:
       workflow:
         condition: service_healthy
       keycloak:
-        condition: service_healthy
+        condition: service_started
     external_links:
       - nginx:${APPLICATION_HOST}
 
