--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,18 +111,18 @@ variables:
     - echo -e "📦📦📦 \e[42mPackaging ${PACKAGE_NAME}\e[0m 📦📦📦"
     - sed -i "s/%CI_COMMIT_REF_NAME%/$CI_COMMIT_REF_NAME/g" docker-compose.yml
     # "docker-compose.ipng.yml"
-    - packageFiles=(
-      "docker-compose.yml"
-      "docker-compose.override.init.yml"
-      "backup.sh"
-      "cron.sh"
-      ".env.dist"
-      "LICENSE.md"
-      "README.md"
-      "src/main/resources/nginx/iparapheur.init.conf.template"
-      )
     - mkdir ${PACKAGE_NAME}
-    - mv -t ${PACKAGE_NAME} ${packageFiles}
+    - >
+      mv -t ${PACKAGE_NAME}
+         docker-compose.yml
+         docker-compose.override.init.yml
+         backup.sh
+         cron.sh
+         .env.dist
+         CHANGELOG.md
+         LICENSE.md
+         README.md
+         src/main/resources/nginx/iparapheur.init.conf.template
     - tar cfz ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
 
 package_prod:
