Revert "Try the mv command with a loop"
This reverts commit edf6224f2ee97f7f0fc1ae3c8e40e75873c69ec4.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,19 +111,18 @@ variables:
     - echo -e "📦📦📦 \e[42mPackaging ${PACKAGE_NAME}\e[0m 📦📦📦"
     - sed -i "s/%CI_COMMIT_REF_NAME%/$CI_COMMIT_REF_NAME/g" docker-compose.yml
     # "docker-compose.ipng.yml"
-    - PACKAGE_FILES=(
-      "docker-compose.yml"
-      "docker-compose.override.init.yml"
-      "backup.sh"
-      "cron.sh"
-      ".env.dist"
-      "CHANGELOG.md"
-      "LICENSE.md"
-      "README.md"
-      "src/main/resources/nginx/iparapheur.init.conf.template"
-      )
     - mkdir ${PACKAGE_NAME}
-    - for PACKAGE_FILE in ${PACKAGE_FILES[@]} do mv ${PACKAGE_FILE} ${PACKAGE_NAME} done
+    - >
+      mv -t ${PACKAGE_NAME} \
+         docker-compose.yml \
+         docker-compose.override.init.yml \
+         backup.sh \
+         cron.sh \
+         .env.dist \
+         CHANGELOG.md \
+         LICENSE.md \
+         README.md \
+         src/main/resources/nginx/iparapheur.init.conf.template
     - tar cfz ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
 
 package_prod:
