replace the inner src with a docker-resource folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,20 +110,25 @@ variables:
   script:
     - echo -e "📦📦📦 \e[42mPackaging ${PACKAGE_NAME}\e[0m 📦📦📦"
     - sed -i "s/%CI_COMMIT_REF_NAME%/$CI_COMMIT_REF_NAME/g" docker-compose.yml
-    # "docker-compose.ipng.yml"
+    # General files
     - mkdir ${PACKAGE_NAME}
-    - >
-      mv -t ${PACKAGE_NAME} \
-         docker-compose.yml \
-         docker-compose.override.init.yml \
-         backup.sh \
-         cron.sh \
-         .env.dist \
-         CHANGELOG.md \
-         LICENSE.md \
-         README.md \
+    - >-
+      mv -t ${PACKAGE_NAME}
+         docker-compose.yml
+         docker-compose.override.init.yml
+         backup.sh
+         cron.sh
+         .env.dist
+         CHANGELOG.md
+         LICENSE.md
+         README.md
+    # Resource files
+    - mkdir ${PACKAGE_NAME}/docker-resources
+    - >-
+      mv -t ${PACKAGE_NAME}/docker-resources
          src/main/resources/nginx/iparapheur.init.conf.template
-    - tar cfz ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
+    # Final zip
+    - tar -cfz ${PACKAGE_NAME_WITH_EXTENSION} ${PACKAGE_NAME}
 
 package_prod:
   stage: package
