--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -186,9 +186,9 @@ publish:
 
 .copying-deployment-files: &copying-deployment-files
   - echo -e "📤 \e[46mCopying and extracting ${PACKAGE_NAME_WITH_EXTENSION}, ${INIT_SCRIPT} and ${OVERRIDE_DOCKER_COMPOSE_FILE} to ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_DIST_PATH}/\e[0m 📤"
-  - ${APPLY_COMMAND} "mkdir -p ${SERVER_DIST_PATH}/"
   - scp ./${PACKAGE_NAME_WITH_EXTENSION} ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_DIST_PATH}/${PACKAGE_NAME_WITH_EXTENSION}
-  - ${APPLY_COMMAND} "sudo tar -xf ${SERVER_DIST_PATH}/${PACKAGE_NAME_WITH_EXTENSION} --directory ${SERVER_DIST_PATH}"
+  - ${APPLY_COMMAND} "sudo tar -zxf ${SERVER_DIST_PATH}/${PACKAGE_NAME_WITH_EXTENSION}"
+  - ${APPLY_COMMAND} "mv ${PACKAGE_NAME} ${SERVER_DIST_PATH}"
   - scp ./${INIT_SCRIPT} ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_DIST_PATH}/${INIT_SCRIPT}
   - ${APPLY_COMMAND} "sudo chmod 770 ${SERVER_DIST_PATH}/${INIT_SCRIPT}"
   - ${APPLY_COMMAND} "sudo chgrp deployment ${SERVER_DIST_PATH}/${INIT_SCRIPT}"
