--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -188,8 +188,8 @@ publish:
   - echo -e "📤 \e[46mCopying and extracting ${PACKAGE_NAME_WITH_EXTENSION}, ${INIT_SCRIPT} and ${OVERRIDE_DOCKER_COMPOSE_FILE} to ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_DIST_PATH}/\e[0m 📤"
   - scp ./${PACKAGE_NAME_WITH_EXTENSION} ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:/tmp/${PACKAGE_NAME_WITH_EXTENSION}
   - ${APPLY_COMMAND} "sudo tar -zxf /tmp/${PACKAGE_NAME_WITH_EXTENSION}"
-  #- ${APPLY_COMMAND} "rm /tmp/${PACKAGE_NAME_WITH_EXTENSION}"
-  - ${APPLY_COMMAND} "mv ${PACKAGE_NAME} ${SERVER_DIST_PATH}"
+  - ${APPLY_COMMAND} "rm /tmp/${PACKAGE_NAME_WITH_EXTENSION}"
+  - ${APPLY_COMMAND} "sudo mv ${PACKAGE_NAME} ${SERVER_DIST_PATH}"
   - scp ./${INIT_SCRIPT} ${TARGETED_ENVIRONNEMENT_USER}@${TARGETED_ENVIRONNEMENT_URL}:${SERVER_DIST_PATH}/${INIT_SCRIPT}
   - ${APPLY_COMMAND} "sudo chmod 770 ${SERVER_DIST_PATH}/${INIT_SCRIPT}"
   - ${APPLY_COMMAND} "sudo chgrp deployment ${SERVER_DIST_PATH}/${INIT_SCRIPT}"
